<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 各菜单名称 -->
    <string name="supervisor">督导</string>
    <string name="educational">教务</string>
    <string name="evaluate">评价</string>
    <string name="tools">工具</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="setting">设置</string>
    <string name="logout">注销</string>
    <string name="update">软件更新</string>
    <string name="logo">督导系统</string>
    <string name="entry_direct">直接录入</string>
    <string name="search_pre_entry">预约查询</string>
    <string name="entry_pre">督导预约</string>
    <string name="search_history">历史查询</string>
    <string name="search_teacher">教师查询</string>
    <string name="search_class">课室查询</string>
    <string name="title">广东工业大学学风督导员工作用表</string>
    <string name="login_title">学风督导员登录界面</string>
    <string name="name">督导系统</string>
    <string name="user">账号：</string>
    <string name="password">密码：</string>
    <string name="clear">重置</string>
    <string name="login">登录</string>
    <!-- 表格1内容 -->
    <string name="school_location">学校校区</string>
    <string name="school_name">学院名称</string>
    <string name="class_name">专业班级</string>
    <string name="teacher_name">任课老师</string>
    <string name="class_location">上课地点</string>
    <string name="check_class">检查节次</string>
    <string name="people_num">应到人数</string>
    <string name="really_num">实到人数</string>
    <!-- 表格2内容 -->
    <string name="late">1.学生上课迟到\n早退情况</string>
    <string name="truant">2.学生旷课情况</string>
    <string name="leave">3.学生请假情况</string>
    <string name="eat">4.学生带食品进\n入教室在课堂\n上吃东西情况</string>
    <string name="phone">5.学生课堂上翻\n看手机情况</string>
    <string name="sleep">6.学生上课睡觉\n或讲话情况</string>
    <string name="shone">7.学生穿拖鞋短\n裤进教室情况</string>
    <!-- 表格3内容 -->
    <string name="submit_time">检查时间</string>
    <string name="ontime">8.任课老师是否按时到教室?</string>
    <string name="other">备注</string>
    <string name="check_title">表单列表</string>
    <string name="title_com">表格内容</string>
    <string name="help_fragment_title">使用帮助</string>
    <string name="helpMessage">直接录入：界面中有红色标记的标签内容是必须填写的。第一个界面在红色标签内容不为空的情况下，学院和专业班级和应到人数会自动填写。\n\n预定录入：列举该督导员这周内预定的所有教室，并通过点击预定的教室进入录入界面进行录入。
        \n\n查询表单：输入日期便可以找到关于自己在相应日期督导的表单，单击表单便可以进入查看和修改的界面。\n\n</string>
    <string name="aboutMessage">指导老师：孙为军老师\n\n开发团队：\n协同工作室，拓科动力工作室\n\n</string>
    <!-- 更新模块 -->
    <string name="soft_update_no">已经是最新版本，不需要更新！</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <!-- 反馈模块 -->
    <string name="sent">提交</string>
    <string name="prompt">使用中遇到什么问题或建议，您可以反馈给我们。</string>
    <string name="feedback">反馈信息</string>
    <string name="welcome">欢迎</string>
    <!-- 表单的标题 -->
    <string-array name="title_names">
        <item>表单一</item>
        <item>表单二</item>
        <item>表单三</item>
    </string-array>
    <!-- APP名称 -->
    <string name="app_name">督导系统</string>
    <!-- 下拉刷新 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="_xueqi">学期</string>
    <!-- 设置 -->
    <string name="style_mode">界面设置</string>
    <string name="style_mode_circle">旋转菜单</string>
    <string name="style_mode_tile">平铺菜单</string>

</resources>