<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!-- 菜单列表 -->
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:title="@string/help">
    </item>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/about">
    </item>
    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="100"
        android:title="@string/setting">
    </item>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/logout">
    </item>
<item
        android:id="@+id/menu_update"
        android:orderInCategory="100"
        android:title="@string/update">
    </item>
</menu>