<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearlayout"
     >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="5dp"      
        android:background="@drawable/shape"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TableRow android:layout_marginTop="3dp" >

            <TextView
                style="@style/textview2"
                android:text="@string/late" />

            <TableRow style="@style/tablelayout2" >

                <Button
                    android:id="@+id/latereduceButton"
                    style="@style/button2"
                    android:text="-" />

                <EditText
                    android:id="@+id/latenumEditText"
                    style="@style/edittext2"
                    android:text="0" />

                <Button
                    android:id="@+id/lateaddButton"
                    style="@style/button2"
                    android:layout_marginLeft="10dp"
                    android:text="+" />
            </TableRow>
        </TableRow>

        <TableRow android:background="@drawable/shape1" >

            <TextView
                style="@style/textview2"
                android:text="@string/truant" />

            <TableRow style="@style/tablelayout2" >

                <Button
                    android:id="@+id/truantnumreduceButton"
                    style="@style/button2"
                    android:text="-" />

                <EditText
                    android:id="@+id/truantnumEditText"
                    style="@style/edittext2"
                    android:text="0" />

                <Button
                    android:id="@+id/truantnumaddButton"
                    style="@style/button2"
                    android:layout_marginLeft="10dp"
                    android:text="+" />
            </TableRow>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/textview2"
                android:text="@string/leave" />

            <TableRow style="@style/tablelayout2" >

                <Button
                    android:id="@+id/leavereduceButton"
                    style="@style/button2"
                    android:text="-" />

                <EditText
                    android:id="@+id/leavenumEditText"
                    style="@style/edittext2"
                    android:text="0" />

                <Button
                    android:id="@+id/leaveaddButton"
                    style="@style/button2"
                    android:layout_marginLeft="10dp"
                    android:text="+" />
            </TableRow>
        </TableRow>

        <TableRow android:background="@drawable/shape1" >

            <TextView
                style="@style/textview2"
                android:text="@string/eat" />

            <TableRow style="@style/tablelayout2" >

                <Button
                    android:id="@+id/eatreduceButton"
                    style="@style/button2"
                    android:text="-" />

                <EditText
                    android:id="@+id/eatnumEditText"
                    style="@style/edittext2"
                    android:text="0" />

                <Button
                    android:id="@+id/eataddButton"
                    style="@style/button2"
                    android:layout_marginLeft="10dp"
                    android:text="+" />
            </TableRow>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/textview2"
                android:text="@string/phone" />

            <TableRow style="@style/tablelayout2" >

                <Button
                    android:id="@+id/phonereduceButton"
                    style="@style/button2"
                    android:text="-" />

                <EditText
                    android:id="@+id/phonenumEditText"
                    style="@style/edittext2"
                    android:text="0" />

                <Button
                    android:id="@+id/phoneaddButton"
                    style="@style/button2"
                    android:layout_marginLeft="10dp"
                    android:text="+" />
            </TableRow>
        </TableRow>

        <TableRow android:background="@drawable/shape1" >

            <TextView
                style="@style/textview2"
                android:text="@string/sleep" />

            <TableRow style="@style/tablelayout2" >

                <Button
                    android:id="@+id/sleepreduceButton"
                    style="@style/button2"
                    android:text="-" />

                <EditText
                    android:id="@+id/sleepnumEditText"
                    style="@style/edittext2"
                    android:text="0" />

                <Button
                    android:id="@+id/sleepaddButton"
                    style="@style/button2"
                    android:layout_marginLeft="10dp"
                    android:text="+" />
            </TableRow>
        </TableRow>

        <TableRow android:layout_marginBottom="1dp" >

            <TextView
                style="@style/textview2"
                android:text="@string/shone" />

            <TableRow style="@style/tablelayout2" >

                <Button
                    android:id="@+id/shonereduceButton"
                    style="@style/button2"
                    android:text="-" />

                <EditText
                    android:id="@+id/shonenumEditText"
                    style="@style/edittext2"
                    android:text="0" />

                <Button
                    android:id="@+id/shoneaddButton"
                    style="@style/button2"
                    android:layout_marginLeft="10dp"
                    android:text="+" />
            </TableRow>
        </TableRow>
    </TableLayout>

</LinearLayout>