<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearlayout" >

    <!-- 表单的第一页 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    style="@style/textview1"
                    android:text="时间日期" />

                <Button
                    android:id="@+id/dateEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow android:background="@drawable/shape1" >

                <TextView
                    style="@style/textview1"
                    android:text="@string/school_location" />

                <Spinner
                    android:id="@+id/schoollocationSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/textview1"
                    android:text="@string/check_class" />

                <Spinner
                    android:id="@+id/checkclassSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="3dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:stretchColumns="1" >

            <TableRow android:background="@drawable/shape1" >

                <TextView
                    style="@style/textview1"
                    android:text="@string/class_location" />

                <Button
                    android:id="@+id/schoollationEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    style="@style/textview3"
                    android:text="@string/school_name" />

                <EditText
                    android:id="@+id/schoolnameEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:enabled="false"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow android:background="@drawable/shape1" >

                <TextView
                    style="@style/textview3"
                    android:text="@string/class_name" />

                <Button
                    android:id="@+id/classnameEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:gravity="left|center"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <TableRow>

                <TextView
                    style="@style/textview3"
                    android:text="@string/people_num" />

                <EditText
                    android:id="@+id/peoplenumEditText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:enabled="false"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:width="@dimen/text_width" />

                <TextView
                    style="@style/textview1"
                    android:text="@string/really_num" />

                <EditText
                    android:id="@+id/reallynumEditText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:width="@dimen/text_width" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>